ListItemDetails and Stage size - Disable ListItemDetails body input until body is loaded - Prevent EndeavourApp UI from showing if screen size is too small - Darker border on check box hover - List item details title should not wrap

--- a/assets/css/sass/_common.scss
+++ b/assets/css/sass/_common.scss
@@ -30,3 +30,22 @@ body {
 li {
     cursor: default;
 }
+div#small-screen-overlay {
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #333;
+    z-index: 100000;
+    color: #eee;
+
+    .message-container {
+        margin: 0 auto;
+        max-width: 300px;
+        text-align: center;
+        font-size: 1.4em;
+    }
+
+}
