--- a/assets/css/sass/views/_list-items-section.scss
+++ b/assets/css/sass/views/_list-items-section.scss
@@ -245,6 +245,13 @@
                     cursor: pointer;
                     position: absolute;
 
+                    &:hover {
+
+                        div.outline {
+                            border-color: #aaa;
+                        }
+
+                    }
                     div.outline {
 
                         height: 18px;
